# bf-rs

./: Cargo.toml  LICENSE.MIT  README.md
.github/workflows/: rust.yml
examples/: bench.bf  prime
src/: brainfuck.pest  codegen.rs  main.rs  parser.rs
